--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -48,3 +48,22 @@ body {
   margin-top: 15px;
   cursor: pointer;
 }
+
+form.crud{
+  display: inline;
+}
+
+/* for update user */
+.update-user-container{
+  padding: 15px;
+  text-align: center;
+}
+.update-user-container label{
+  display: block;
+}
+
+.update-user-container .btn-save{
+  margin-top: 10px;
+  padding: 5px;
+  cursor: pointer;
+}
