--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -35,8 +35,13 @@
             <td><%= dataUser[i].lastName %></td>
             <td>
               <button type="button"><a href="detail/user/<%= dataUser[i].id %>" target="_blank">Detail</a></button>
-              <button type="button">Edit</button>
-              <button type="button">Delete</button>
+              <form class="crud" action="/edit-user/<%= dataUser[i].id %>" method="get">
+                <button type="submit">Edit</button>
+              </form>
+              <form class="crud" action="/delete-user" method="post">
+                <input type="text" hidden value="<%= dataUser[i].id %>" name="userId" />
+                <button type="submit">Delete</button>
+              </form>
             </td>
           </tr>
        <% } %>
