upload single file with multer & app-root-path

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -62,8 +62,16 @@ form.crud{
   display: block;
 }
 
-.update-user-container .btn-save{
+.btn-save{
   margin-top: 10px;
   padding: 5px;
   cursor: pointer;
+}
+
+.upload-file-container{
+  padding: 15px;
+}
+
+.upload-file-container label{
+  display: block;
 }
