--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,10 +11,9 @@
 </head>
 <body>
     <div class="topnav">
-      <a class="active" href="#home">Home</a>
-      <a href="#news">News</a>
-      <a href="#contact">Contact</a>
-      <a href="#about">About</a>
+      <a class="active" href="/">Home</a>
+      <a href="/upload">Upload - Multer</a>
+      <a href="/about">About</a>
     </div>
       
     <div class="w3-container">
